[gd_scene load_steps=18 format=3 uid="uid://d4m3kypc00a78"]

[ext_resource type="Texture2D" uid="uid://dwv44y2qjl2nq" path="res://art/menu_background.png" id="1_grjg0"]
[ext_resource type="Script" path="res://scripts/gui/main_menu.gd" id="1_jmcto"]
[ext_resource type="FontFile" uid="uid://echw0a2twfcv" path="res://fonts/Kenney Pixel.ttf" id="2_f1hxg"]

[sub_resource type="LabelSettings" id="LabelSettings_yj2vo"]
font = ExtResource("2_f1hxg")
font_size = 64
font_color = Color(1, 1, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8e5q6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k4yys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g74l1"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rsug7"]

[sub_resource type="InputEventKey" id="InputEventKey_0eklu"]
device = -1
keycode = 78
unicode = 110

[sub_resource type="Shortcut" id="Shortcut_bgq3q"]
events = [SubResource("InputEventKey_0eklu")]

[sub_resource type="InputEventKey" id="InputEventKey_oksyu"]
device = -1
keycode = 76
unicode = 108

[sub_resource type="Shortcut" id="Shortcut_uriox"]
events = [SubResource("InputEventKey_oksyu")]

[sub_resource type="InputEventKey" id="InputEventKey_drava"]
device = -1
keycode = 81
unicode = 113

[sub_resource type="InputEventKey" id="InputEventKey_r042r"]
device = -1
ctrl_pressed = true
keycode = 81
unicode = 113

[sub_resource type="InputEventKey" id="InputEventKey_k5jdj"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_qcg0b"]
events = [SubResource("InputEventKey_drava"), SubResource("InputEventKey_r042r"), SubResource("InputEventKey_k5jdj")]

[sub_resource type="LabelSettings" id="LabelSettings_smb82"]
font = ExtResource("2_f1hxg")
font_size = 32
font_color = Color(1, 1, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmcto")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_grjg0")
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="GameTitleLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DUNGEON OF THE MAD GOD(OT)"
label_settings = SubResource("LabelSettings_yj2vo")

[node name="NewButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_f1hxg")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_8e5q6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k4yys")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g74l1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rsug7")
theme_override_styles/focus = SubResource("StyleBoxFlat_g74l1")
shortcut = SubResource("Shortcut_bgq3q")
shortcut_feedback = false
text = "[N]ew Game"

[node name="LoadButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_f1hxg")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_8e5q6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k4yys")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g74l1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rsug7")
theme_override_styles/focus = SubResource("StyleBoxFlat_g74l1")
shortcut = SubResource("Shortcut_uriox")
shortcut_feedback = false
text = "[L]oad Game"

[node name="QuitButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_f1hxg")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_8e5q6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k4yys")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g74l1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rsug7")
theme_override_styles/focus = SubResource("StyleBoxFlat_g74l1")
shortcut = SubResource("Shortcut_qcg0b")
shortcut_feedback = false
text = "[Q]uit"

[node name="DeveloperLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Golden Drake Studios"
label_settings = SubResource("LabelSettings_smb82")
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
